<resources>
    <string name="hint_text_content">Text Content</string>
    <string name="hint_barcode_height">Barcode Height</string>
    <string name="hint_barcode_width">Barcode Width</string>
    <string name="hint_qrcode_content">QRCode Content</string>
    <string name="hint_qrcode_size">QRCode Size</string>
    <string name="defaultloading">Please wait...</string>
    <string name="data">data</string>
    <string name="hint_font_size">Font Size</string>
    <string name="start_print">Start Print</string>
    <string name="standard_test">Standard Test</string>
    <string name="text_print">Print Text</string>
    <string name="qrcode_print">Print QR code</string>
    <string name="bitmap_print">Print Pictures</string>
    <string name="barcode_print">Print Barcode</string>
    <string name="receipt_print">Print Tickets</string>
    <string name="battery_test">Battery Jump Test</string>
    <string name="font_test">Font Effect</string>
    <string name="content_density">印字率</string>
    <string name="height_factor">高度( x 48mm)</string>
    <string name="batt_level_skip_error">"Wrong! Power jump, current power%d%%，Last power%d%%"</string>
    <string name="batt_level_test_sleep">"Do not print the next time in %d minutes"</string>
    <string name="device_not_connect">device not connect</string>
    <string name="end_transaction">ICC transaction end</string>
    <string name="select_app_start">please select app</string>
    <string name="select_app_end">select app end, position = </string>
    <string name="emv_configured">emv is configured</string>
    <string name="emv_not_configured">emv is not configured</string>
    <string name="msg_select_device">Click here to scan and connect device</string>
    <string name="msg_do_trade">Click here to start do trade after finish connected</string>
    <string name="msg_disconnect">Click here to disConnected device</string>
    <string name="msg_conn_usb">Click here to find and connect usb</string>
    <string name="device_info">Device Info</string>
    <string name="device_update">Device Update</string>
    <string name="device_operate">Device Operate</string>
    <string name="device_other">Other</string>
    <string name="title_audio">Audio</string>
    <string name="title_print">Print</string>
    <string name="mp_text_print">Print Text</string>
    <string name="mp_barcode_print">Print BarCode</string>
    <string name="mp_qrcode_print">Print QRCode</string>
    <string name="mp_tickets_print">Print Tickets</string>
    <string name="mp_standard_print">Standard Print Test</string>
    <string name="mp_battery_test">Battery  Test</string>
    <string name="mp_font_test">Font  Test</string>
    <string name="title_blu">Bluetooth</string>
    <string name="title_ble">Ble Bluetooth</string>
    <string name="title_welcome">Blusalt Pos</string>
    <string name="msg_allowed_location_permission">Location permission is on</string>
    <string name="msg_not_allowed_loaction_permission">Location permission is forbidden, related map functions are not available</string>
    <string name="audio_open">audio control:open</string>
    <string name="audio_close">audio control:close</string>
    <string name="audio_unknow">audio control:unknown</string>
    <string name="get_pin">Get Pin</string>
    <string name="do_tradelog_operation">TradeLog Operation</string>
    <string name="get_update_key">get_update_key</string>
    <string name="reset_qpos">qpos reset</string>
    <string name="set_sleepMode_time">set sleep mode time</string>
    <string name="input_pin">Please input pin now.</string>
    <string name="setBuzzer">setBuzzer</string>
    <string name="getQuickEmvStatus">get Quick Emv Status</string>
    <string name="setQuickEmvStatus">set Quick Emv Status</string>
    <string name="updateEMVByXml">update EMV By Xml</string>
    <string name="serial_port">Serial port</string>
    <string name="normal_bluetooth">Normal Bluetooth</string>
    <string name="pos_bluetooth">Pos Bluetooth</string>
    <string name="other_blu">BLE Blutooth</string>
    <string name="updateEMVRID">update EMV RID</string>
    <string name="updateIPEK">update IPEK</string>
    <string name="mac_error">MAC ERROR</string>
    <string name="cmd_timeout">CMD TIMEOUT</string>
    <string name="pinKsn">pinKsn:</string>
    <string name="trackksn">trackksn:</string>
    <string name="pinBlock">pinBlock:</string>
    <string name="posId">posId:</string>
    <string name="get_pos_id">Get PosID</string>
    <string name="operate_mafire">Operate Mafire Cards</string>
    <string name="inject_key_remote">Remote key Loading API</string>
    <string name="getting_pos_id">Getting POS ID…</string>
    <string name="isCardExist">check card in slot</string>
    <string name="scan_usb_device">usb device</string>
    <string name="text_quick_emv">update quick emv config</string>
    <string name="poll_card">poll card</string>
    <string name="verify_card">verify card</string>
    <string name="read_card">read card</string>
    <string name="operate_card">operate card</string>
    <string name="write_card">write card</string>
    <string name="transfer_card">Transceive APDU</string>
    <string name="finish_card">finish mafire card</string>
    <string name="please_select_bt_name">select device</string>
    <string name="open_serial_port">open serial port</string>
    <string name="open_audio">open audio</string>
    <string name="scan_bt_pos_error">no paired bluetooth device\nplease pair bluetooth device first</string>
    <string name="connecting_bt_pos">connecting\nPlease wait…</string>
    <string name="app_name">MPOSIntentApp</string>
    <string name="waiting_for_card">Please insert/swipe/tap card now.</string>
    <string name="no_card_detected">No card detected. Please insert or swipe card again and press check card.</string>
    <string name="icc_card_inserted">ICC Card Inserted</string>
    <string name="card_inserted">Card Inserted (Not ICC)</string>
    <string name="bad_swipe">Bad Swipe. Please swipe again and press check card.</string>
    <string name="card_swiped">Card Swiped: </string>
    <string name="card_no_response">Check card no response</string>
    <string name="format_id">Format ID: </string>
    <string name="masked_pan">Masked PAN: </string>
    <string name="expiry_date">Expiry Date: </string>
    <string name="cardholder_name">Cardholder Name: </string>
    <string name="service_code">Service Code: </string>
    <string name="track_1_length">Track 1 Length: </string>
    <string name="track_2_length">Track 2 Length: </string>
    <string name="track_3_length">Track 3 Length: </string>
    <string name="encrypted_tracks">Encrypted Tracks: </string>
    <string name="encrypted_track_1">Encrypted Track 1: </string>
    <string name="encrypted_track_2">Encrypted Track 2: </string>
    <string name="encrypted_track_3">Encrypted Track 3: </string>
    <string name="partial_track">Partial Track: </string>
    <string name="bootloader_version">Bootloader Version: </string>
    <string name="firmware_version">Firmware Version: </string>
    <string name="usb">USB: </string>
    <string name="charge">Charge: </string>
    <string name="battery_level">Battery ADC: </string>
    <string name="hardware_version">Hardware Version: </string>
    <string name="track_1_supported">Track 1 Supported: </string>
    <string name="track_2_supported">Track 2 Supported: </string>
    <string name="track_3_supported">Track 3 Supported: </string>
    <string name="set_amount">Set Amount</string>
    <string name="enter_pin">Please enter PIN</string>
    <string name="request_data_to_server">Request data to server.</string>
    <string name="replied_success">Replied success.</string>
    <string name="replied_failed">Replied failed.</string>
    <string name="batch_data">Batch Data:\n</string>
    <string name="transaction_log">Transaction Log:\n</string>
    <string name="reversal_data">Reversal Data:\n</string>
    <string name="please_select_app">Please select app</string>
    <string name="transaction_result">Transaction Result</string>
    <string name="transaction_approved">Approved</string>
    <string name="transaction_terminated">Terminated</string>
    <string name="transaction_declined">Declined</string>
    <string name="transaction_cancel">Cancel</string>
    <string name="transaction_capk_fail">Fail (CAPK fail)</string>
    <string name="transaction_not_icc">Fail (Not ICC card)</string>
    <string name="transaction_app_fail">Fail (App fail)</string>
    <string name="transaction_device_error">Pos Error</string>
    <string name="request_terminal_time">Request Terminal Time. Replied </string>
    <string name="confirm_amount">Confirm amount</string>
    <string name="amount">Amount</string>
    <string name="wait">Please wait…</string>
    <string name="remove_card">Please remove card</string>
    <string name="try_another_interface">Please try another interface</string>
    <string name="processing">Processing…</string>
    <string name="no_device_detected">No pos detected.</string>
    <string name="device_plugged">Pos connected.</string>
    <string name="device_unplugged">Pos disconnected.</string>
    <string name="command_not_available">Command not available</string>
    <string name="device_no_response">Pos no response</string>
    <string name="device_reset">Pos reset</string>
    <string name="unknown_error">Unknown error</string>
    <string name="device_busy">Pos Busy</string>
    <string name="out_of_range">Input out of range.</string>
    <string name="invalid_format">Input invalid format.</string>
    <string name="zero_values">Input are zero values.</string>
    <string name="input_invalid">Input invalid.</string>
    <string name="cashback_not_supported">Cashback not supported.</string>
    <string name="crc_error">CRC Error.</string>
    <string name="comm_error">Communication Error.</string>
    <string name="get_info">getPosInfo</string>
    <string name="get_key_checkvalue">getPosKeyCheckValue</string>
    <string name="check_card">Start Trade</string>
    <string name="disconnect">disconnect</string>
    <string name="cancel">Cancel</string>
    <string name="pin">PIN</string>
    <string name="cashback_amount">Cashback</string>
    <string name="confirm">Confirm</string>
    <string name="bypass">Bypass</string>
    <string name="getting_info">Getting Pos info…</string>
    <string name="starting">Starting…</string>
    <string name="get_ksn">Get KSN</string>
    <string name="add_ksn">Add KSN</string>
    <string name="get_encrypt_data">get_encrypt_data</string>
    <string name="card_not_supported">Card not support</string>
    <string name="missing_mandatory_data">Missing mandatory data</string>
    <string name="card_blocked_or_no_evm_apps">Card blocked or no EMV apps</string>
    <string name="invalid_icc_data">Invalid ICC data</string>
    <string name="used">used:</string>
    <string name="hours">hours</string>
    <string name="minute">minutes</string>
    <string name="seconds">seconds</string>
    <string name="about">about</string>
    <string name="init_keys">Exchange Certificates</string>
    <string name="verify_keys">Initial Key Loading</string>
    <string name="key_loading">Confirm Key Type</string>
    <string name="tap_card">Tap Card: </string>
    <string name="battery_percentage">battery percentage: </string>
    <string name="hello_world">Hello world!</string>
    <string name="pedi_command">&#091;AOPEDI&#059;VS2&#059;RF0&#059;TD1&#059;CC%s&#059;RG%s&#059;CE%s&#059;&#093;</string>
    <string name="pedk_command">&#091;AOPEDK&#059;KN&#059;RD&#059;CE%s&#059;&#093;</string>
    <string name="pedv_command">&#091;AOPEDV&#059;KV&#059;RD&#059;CE%s&#059;&#093;</string>
    <string name="scan_over">end the scan</string>
    <string name="app_select_timeout_error">APP select time out</string>
    <string name="mp600_print">D30Print</string>
    <string name="print">Print</string>
</resources>