<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/mifareid"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:visibility="gone">

            <Button
                android:id="@+id/search_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/poll_card" />

            <LinearLayout
                android:id="@+id/li"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/verify_card"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/verify_card" />

                <Spinner
                    android:id="@+id/verift_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/li3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/li"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/operate_card"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/operate_card" />

                <Spinner
                    android:id="@+id/cmd_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/li2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/li3"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/write_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/write_card" />

                <Button
                    android:id="@+id/read_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/read_card" />
            </LinearLayout>

            <Button
                android:id="@+id/transfer_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transfer_card"
                android:visibility="gone" />

            <Button
                android:id="@+id/finish_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/finish_card" />

            <TextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="key value or cardData:"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_background"
                android:hint="please input key value or cardData"
                android:padding="5dp"
                android:text="ffffffffffff" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="block addr:"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/block_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv2"
                android:background="@drawable/edit_background"
                android:hint="please input block addr"
                android:padding="5dp"
                android:text="0A" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ul_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:visibility="gone">

            <Button
                android:id="@+id/poll_ulcard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/poll_card" />

            <Button
                android:id="@+id/verify_ulcard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verify_card" />

            <LinearLayout
                android:id="@+id/li5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/write_ul"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="write UL" />

                <Button
                    android:id="@+id/read_ulcard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="read UL" />
            </LinearLayout>

            <Button
                android:id="@+id/get_ul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="get UL Info" />

            <Button
                android:id="@+id/fast_read_ul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="fast read UL" />

            <Button
                android:id="@+id/finish_ulcard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/finish_card" />

            <TextView
                android:id="@+id/tv11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="key value or cardData:"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/status11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv11"
                android:background="@drawable/edit_background"
                android:hint="please input key value or cardData"
                android:text="ffffffff" />

            <TextView
                android:id="@+id/tv12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="block addr:"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/block_address11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv12"
                android:background="@drawable/edit_background"
                android:hint="please input block addr"
                android:text="0A" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>